<resources>
    <string name="app_name">EmoPlayer</string>
    <string name="username_or_email">UserName or Email</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">UserName</string>
    <string name="name">Name</string>
    <string name="new_user_sign_up">New User? Sign Up</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="profile">Profile</string>
    <string name="ek_saathi_aur_bhi_tha">Ek saathi aur bhi tha</string>
    <string name="sonu_nigam">Sonu Nigam</string>
    <string name="happy">Happy</string>
    <string name="recommended">Recommended</string>
    <string name="your_emotion">Your Emotion</string>
    <string name="d">D</string>


    <!--  static variables-->
    <string name="SONG_LIST">songs</string>
    <string name="SONG_POSITION">position</string>
    <string name="SOURCE">source</string>
    <string name="FAV_SONGS">favourites song</string>
    <string name="EMOTION_SONGS">emotion songs</string>
    <string name="RECOMMENDED_SONGS">recommended songs</string>
    <string name="rahul_dev">Rahul Dev</string>
    <string name="devrahul2215_gmail_com">devrahul2215@gmail.com</string>
    <string name="india">India</string>
    <string name="male">Male</string>
    <string name="dev">Dev</string>
    <string name="_2">2</string>
    <string name="songs">Songs</string>
    <string name="unknown">Unknown</string>
    <string name="logout">LOGOUT</string>
    <string name="my_selfie">My Selfie</string>
    <string name="cancel">Cancel</string>
    <string name="unknown_gmail_com">unknown@gmail.com</string>

</resources>
