<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#263238"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".Login.LoginActivity">

    <!--<de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/login_logo"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="@dimen/spacing_xlarge"
        android:scaleType="centerInside"
        android:src="@drawable/logo_transparent"
        app:civ_border_color="#FFF"
        app:civ_border_width="2dp" />-->

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="@dimen/spacing_large"
        android:scaleType="centerInside"
        android:src="@drawable/logo_transparent"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_smlarge"
        android:layout_marginTop="@dimen/spacing_mlarge"
        android:layout_marginEnd="@dimen/spacing_smlarge"
        android:background="#fff"
        android:elevation="5dp"
        android:visibility="visible"
        app:cardCornerRadius="6dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_middle"
                android:layout_marginBottom="@dimen/spacing_xlarge"
                android:text="@string/sign_in"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="#4CAF50"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_person_outline"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="16sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_mlarge" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_lock_outline"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="16sp" />


            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_mlarge" />

            <TextView
                android:id="@+id/login_forgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/forgot_password"
                android:textColor="#4CAF50"
                android:textSize="16sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_mlarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="2dp">

                <Button
                    android:id="@+id/login_loginButton"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/button_background"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textSize="20sp"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/spacing_mlarge" />

    <TextView
        android:id="@+id/login_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_user_sign_up"
        android:textColor="#81C784"
        android:textSize="18sp" />

</LinearLayout>