<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".SignUp.SignUpFragment">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="@dimen/spacing_xlarge"
        android:scaleType="centerInside"
        android:src="@drawable/logo_transparent" />

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/spacing_mxlarge" />


    <EditText
        android:id="@+id/signUp_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/ic_person_outline"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textSize="24sp" />

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/spacing_mlarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/signUp_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/ic_lock_outline"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/signUp_passwordToggle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="-45dp"
            android:layout_marginTop="6dp"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/ic_eye" />

    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/spacing_mlarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/signUp_confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/ic_lock_outline"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/signUp_confirmPasswordToggle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="-45dp"
            android:layout_marginTop="6dp"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/ic_eye" />

    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/spacing_mxlarge" />

    <ImageButton
        android:id="@+id/signIp_submit"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/button_background"
        android:src="@drawable/ic_chevron_right_black_24dp" />


</LinearLayout>